--- a/app/src/main/res/layout/list_of_documents.xml
+++ b/app/src/main/res/layout/list_of_documents.xml
@@ -11,7 +11,10 @@
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical">
-
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_height="18pt"
+            android:layout_width="18pt" />
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
