--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,41 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorTitle</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <!--<item name="actionMenuTextColor">#000000</item>-->
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
 
+    <!--<style name="VKTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>-->
+    <style name="ToolbarTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlActivated">#ffffff</item>
+        <item name="colorControlNormal">#ffffff</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <!--<item name="actionMenuTextColor">#000000</item>-->
+        <item name="android:textColorPrimary">@color/colorTitle</item>
+    </style>
+
+    <style name="NavigationTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlActivated">#ffffff</item>
+        <item name="colorControlNormal">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+        <!--<item name="android:textColorPrimary">#000000</item>-->
+        <item name="android:actionMenuTextColor">#000000</item>
+    </style>
 
 </resources>
