--- a/app/src/main/res/layout/list_of_documents.xml
+++ b/app/src/main/res/layout/list_of_documents.xml
@@ -4,6 +4,7 @@
              android:layout_height="wrap_content"
              android:layout_marginTop="2dp"
              android:layout_marginBottom="2dp"
+                android:longClickable="true"
              android:background="?android:attr/selectableItemBackground"
              >
     <LinearLayout
