--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,5 +11,9 @@
             android:icon="@mipmap/folder"
             android:checked="false"
             android:title="Dialogs" />
+        <item
+            android:id="@+id/exit"
+            android:checked="false"
+            android:title="Exit" />
     </group>
 </menu>
