--- a/app/src/main/res/layout/folder_view_page.xml
+++ b/app/src/main/res/layout/folder_view_page.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="55dp"
             android:id="@+id/folder_view_folder_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
