--- a/app/src/main/res/layout/nav_header_list.xml
+++ b/app/src/main/res/layout/nav_header_list.xml
@@ -17,6 +17,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/vk" />
+        app:srcCompat="@mipmap/logo_mini" />
 
 </LinearLayout>
