--- a/app/src/main/res/menu/menu_mail.xml
+++ b/app/src/main/res/menu/menu_mail.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
+        android:id="@+id/action_add"
+        app:showAsAction="always"
+        android:icon="@drawable/add"
+        android:title="add"/>
+    <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="always"
